FrontEnd/assets/style.css
/* ... */
.modal {
    position: relative;
    overflow: auto;
    width: 43.75vw;
    min-height: 74vh;
    max-height: calc(100vh - 95px);
    padding: 20px;
    background-color: var(--portfolio-modals-bg-color);
    border-radius: 10px;
}

.editor-head-gui-element {
    background: transparent;
    border: none;
}

.editor-head-gui-element:hover {
    cursor: pointer;
}

.modal h1 {
    font-size: 1.85em;
    color: inherit;
    font-family: var(--portfolio-body-font);
    font-weight: var(--portfolio-fw-regular);
    text-align: center;
    margin-bottom: 35px;
}

.modal hr {
    width: 100%;
    margin-top: 50px;
    opacity: .4;
}

.modal-dynamic-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.modal-dynamic-content-main {
    flex-basis: 100%;
    width: 100%;
    align-self: flex-start;
}

.modal .modal-gallery {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-column-gap: .9rem;
    grid-row-gap: 20px;
}

.modal .modal-gallery img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.modal .modal-gallery-element {
    position: relative;
    display: flex;
    flex-direction: column;
    min-width: 5vw;
    min-height: 100px;
}

.modal .modal-gallery-element-btns {
    width: 100%;
    position: absolute;
    display: flex;
    align-self: center;
    justify-content: flex-end;
    flex-wrap: wrap;
}

.modal .modal-gallery-element-btns a {
    background: var(--portfolio-editorbanner-bg-color);
    border-radius: 3px;
    margin-right: 3px;
    margin-top: 5px;
    height: 20px;
    width: 20px;
}

.modal .modal-gallery-element-btns img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.modal .modal-gallery-element-img {
    margin-bottom: 2px;
}

.modal-bottom {
    width: 100%;
}

.modal-gallery-trash-btn {
    padding: 3px;
}

.modal-gallery-move-btn {
    padding: 2px;
}

.modal-head {
    position: relative;
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.modal .modal-gallery-delete-all-button-wrapper {
    text-align: center;
}

.modal .modal-bottom button {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    max-width: 237px;
    margin: 2.4em auto;
    margin-bottom: 1.5em;
}

.modal .modal-bottom div {
    margin: auto;
    margin-bottom: 20px;
}

.modal .modal-gallery a {
    text-decoration: none;
    color: inherit;
    margin-top: 3px;
    font-size: .9em;
}

.modal .modal-gallery a:hover {
    font-weight: var(--portfolio-navbar-item-hover-fw);
}

.modal .modal-bottom a {
    text-decoration: none;
    color: var(--portfolio-modals-delete-button-font-color);
}

.send-img {
    display: flex;
    align-self: stretch;
    align-items: stretch;
    width: 100%;
    margin: auto;
}

.send-img label:not(.add-file-btn) {
    margin: 2em 0 .5em 0;
}

.send-img label.add-file-btn {
    margin: 0;
    padding: .7em 2.5em;
    border: 0;
    border-radius: 50px;
    background-color: var(--portfolio-modals-add-photo-button-bg-color);
    color: var(--portfolio-modals-add-photo-button-font-color);    
    font-weight: var(--portfolio-fw-semibold);
}

.send-img.form input, .send-img.form select {
    font-size: var(--portfolio-modals-forms-font-size);
}

.select {
    border: none;
    background-color: var(--portfolio-forms-fields-bg-color);
    font-size: var(--portfolio-forms-fields-font-size);
    min-height: var(--portfolio-forms-fields-min-height);
    box-shadow: var(--portfolio-forms-fields-shadow);
    text-indent: var(--portfolio-forms-fields-text-indent);

    appearance: none;
    background: url("./icons/button-expand.svg") no-repeat;
    background-position: right 6.64% bottom 48%;
}

.modal .add-photo-box {
    --_padding-bottom: 20px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    min-height: 170px;
    background: var(--portfolio-modals-add-photo-box-bg-color);
    padding-bottom: var(--_padding-bottom);
}

.modal .add-photo-box-placeholder {
    display: inherit;
    flex-direction: inherit;
    justify-content: inherit;
    align-items: inherit;
}

.modal .add-photo-box p {
    margin-top: 5px;
    font-size: .7em;
}

.modal .add-photo-box .add-file-input {
    position: absolute;
    width: 100%;
    height: calc(100% + var(--_padding-bottom));
    opacity: 0;
}

.modal .add-photo-box .add-file-input:hover {
    cursor: pointer;
}

.modal .picture-placeholder {
    object-fit: cover;
    margin: 0;
    margin-top: 1.5em;
    margin-bottom: 1em;
}

.modal .modal-content {
    width: 76%;
    height: calc(100% - 50px);
    margin: 0 auto;
}

/* Focus trap (hack in the matrix) */
.editor-banner:not(:focus-within) {
    background: var(--portfolio-editorbanner-pseudo-transition-bg-color);
    transition: background .01s;
}

/* Focus trap (hack in the matrix) */
.modal-wrapper[aria-modal="true"]:not(:focus-within) {
    background: var(--portfolio-modals-wrapper-pseudo-transition-bg-color);
    transition: background .01s;
}

/*** I. Javascript patches, do NOT use it in your HTML */
.js-monkey-patch-flex-column {
    flex-direction: column !important;
}

.js-monkey-patch-display-flex {
    display: flex !important;
}

.js-monkey-patch-display-none {
    display: none !important;
}

.js-monkey-patch-loading {
    animation: galleryLoading .8s ease-in-out infinite !important;
}

.js-monkey-patch-remove-animations {
    animation: none !important;
}

